--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="box"></div>
+    <div class="box"></div
+<h1>Salom Rayhona</h1>
 </body>
 </html>
